--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* General body and font setup */
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
@@ -6,7 +6,6 @@ body {
   background-color: #e0f7f6;
 }
 
-/* Header and navigation bar */
 header {
   background-color: #009999;
   padding: 1rem;
@@ -144,4 +143,112 @@ img.blog-image {
 .logo {
 	float: left;
 	margin: 5;
+}
+.site-footer{
+	background-color: #0055a4;
+	color: white;
+	padding: 1.5rem 0;
+	text-align: center;
+	position: relative;
+	bottom: 0;
+	width: 100%;
+	margin-top: auto;
+}
+.footer-social{
+	display: flex;
+	gap: 10px;
+	justify-content: center;
+	align-items: center;
+	padding: 10px 0;
+}
+.footer-social a{
+	margin: 0 10px;
+	display: inline-block;
+}
+.footer-social img{
+	max-width: 100%;
+	width: 20px;
+	height: auto;
+	filter: brightness(0) invert(1);
+	transition: transform 0.2s
+}
+.footer-social img:hover {
+	transform: scale(1.2);
+}
+html, body{
+	height: 100%;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+}
+body > main{
+	flex: 1;
+}
+.social-icon {
+	width: 10px;
+	height: 10px;
+	object-fit: contain;
+	filter: brightness(0) invert(1);
+	transition: transform 0.2s;
+}
+.social-icon hover{
+	transform: scale(1.2);
+}
+.social-icon{
+	max-width: 24px !important;
+	max-height: 24px !important;
+}
+.social-icon{
+	width: 32px;
+	height: 32px;
+	margin: 0 10px;
+}
+.contact-section, .thank-you {
+  padding: 20px;
+  max-width: 800px;
+  margin: auto;
+}
+
+form input, form textarea {
+  width: 100%;
+  padding: 8px;
+  margin: 8px 0;
+}
+
+form button {
+  padding: 10px 20px;
+  background-color: #005288;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #0077b6;
+}
+.stats-page {
+	padding: 20px;
+	max-width: 1000px;
+	margin: auto;
+	float: center;
+}
+.stats-section {
+	margin-bottom: 40px;
+}
+.stats-table{
+	width: 100%;
+	border-collapse: collapse;
+	background-color: #f9f9f9;
+}
+.stats-table th .stats-table td {
+	padding: 10px;
+	border: 1px solid #ccc;
+	text-align: left;
+}
+.stats-table th {
+	background-color: #005288;
+	color: white;
+}
+.stats-table tr:nth-child(even) {
+	background-color: #f1f1f1;
 }
